@@ -1,3 +1,8 @@
+2006-01-21  Richard Hult  <richard@imendio.com>
+
+	* src/bacon-message-connection.c:
+	* src/bacon-message-connection.h: Update from bacon.
+
 2006-01-15 Christian Persch <chpe@cvs.gnome.org>
  
 	* m4/gecko.m4:
